# ATNYCHI144XXX-project-blue-light

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  SPECIFICATIONS.md  WHITEPAPER.md
hardware/: BOM.md
src/: __init__.py
src/ai/: __init__.py  mass_spec_analyzer.py  spectral_classifier.py  thermal_anomaly_detector.py
src/alert/: __init__.py  alert_generator.py  notification_service.py
src/fusion/: __init__.py  fusion_engine.py  threat_assessor.py
src/sensor/: __init__.py  aftms_interface.py  camera_manager.py  mct_reader.py  qcl_controller.py
tests/: __init__.py  test_ai.py  test_alert.py  test_fusion.py  test_sensor.py
