[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-blue-light"
version = "0.1.0"
description = "High-Speed Standoff Fentanyl Interdiction System"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "ATNYCHI144XXX"}
]
keywords = [
    "fentanyl-detection",
    "spectroscopy",
    "chemical-sensing",
    "ai-detection",
    "terahertz",
    "quantum-cascade-laser"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "torch>=2.0.0",
    "opencv-python>=4.8.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/ATNYCHI144XXX/ATNYCHI144XXX-project-blue-light"
Repository = "https://github.com/ATNYCHI144XXX/ATNYCHI144XXX-project-blue-light"
Documentation = "https://github.com/ATNYCHI144XXX/ATNYCHI144XXX-project-blue-light/tree/main/docs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
